# $Id$

2005-10-11	Anton E. Lebedevich	<noiselist@pochta.ru>

* core/DB/DBTransaction.class.php: "neverending" transactions fixed.

2005-10-10	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* core/OSQL/: SelectQueries as select fields implemented as requested by
Sergeev Sergey <serge@rdw.ru>. Minor internal API changes.

2005-10-06	Anton E. Lebedevich	<noiselist@pochta.ru>

* core/Base/Timestamp.class.php: getDayStartStamp, getDayEndStamp methods
added.

* core/Base/DateRange.class.php: enlarge, clip, compare methods added.

2005-10-06	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* core/OSQL/SelectQuerySkeleton.class.php: merged back to SelectQuery as
suggested by Antony.

* core/Base/StorableContainer.class.php, core/Base/DAOConnected.class.php:
moved to main/DAOs/.

2005-09-30	Anton E. Lebedevich	<noiselist@pochta.ru>

* core/Base/Timestamp.class.php: useful compare method added.

* core/Base/DateRange.class.php: useless compare method removed.

2005-09-28	Anton E. Lebedevich	<noiselist@pochta.ru>

* core/Base/DateRange.class.php: contains, split methods added.

2005-09-27	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* main/DAOs/UnifiedContainer.class.php: correct fetch() behaviour.

2005-09-27	Anton E. Lebedevich	<noiselist@pochta.ru>

* main/Utils/LogicUtils.class.php: corrected conditions.

* core/Base/DateRange.class.php: compare, overlaps methods added.

2005-09-24	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* main/DAOs/UnifiedContainer.class.php: do not throw ObjectNotFoundException
on empty lists.

2005-09-23	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* 0.2.2 released.

* main/Utils/LogicUtils.class.php: new place for common used logic patterns.

2005-09-20	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* core/Base/: added delimiters for date'n'time-related stringoization methods,
Time.class.php introduced.

* core/DB/DBTransaction.class.php: extremly evil typo fixed, so now
transaction doesn't start every time you're adding new Query to it.
